# ar_golf_tracker

./: .gitignore  DEPLOYMENT_GUIDE.md  ENCRYPTION_GUIDE.md  INTEGRATION_TEST_SUMMARY.md  MOBILE_APP_EXAMPLES.md  POSTGIS_FIX.md  README.md  SETUP_COMPLETE.md  TASK_12.1_SUMMARY.md  TASK_12.2_SUMMARY.md  TASK_12.3_SUMMARY.md  TASK_13.1_SUMMARY.md  TASK_13.2_SUMMARY.md  TASK_13.3_SUMMARY.md  TASK_18_FINAL_SUMMARY.md  TASK_18_INTEGRATION_TEST_REPORT.md  TASK_8_SUMMARY.md  pyproject.toml  requirements.txt  setup.py
ar_golf_tracker/: __init__.py
ar_golf_tracker/ar_glasses/: __init__.py  club_recognition.py  database.py  distance_calculator.py  gps_tracking.py  hole_detector.py  offline_manager.py  schema.sql  shot_manager.py  shot_recorder.py  swing_detection.py  sync_service.py
ar_golf_tracker/backend/: README.md  __init__.py  api.py  config.py  conflict_resolver.py  course_service.py  database.py  device_api.py  device_manager.py  device_schema.sql  sample_courses.py  schema.sql  server.py
ar_golf_tracker/mobile_app/: __init__.py  api_client.py  example_usage.py  example_usage_demo.py  map_example.py  map_visualization.py  round_detail_view.py  (+3 more)
tests/: __init__.py  test_backend_api.py  test_club_recognition.py  test_course_service.py  test_device_api.py  test_device_manager.py  test_distance_calculation.py  test_encryption.py  test_gps_integration.py  test_integration_e2e.py  test_map_visualization.py  test_models.py  test_round_detail_view.py  test_round_list_view.py  test_shot_detail_view.py  test_sync_encryption.py  test_sync_operations.py  test_sync_service.py
(+6 files in other folders)
